--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
 <ng-template #showLogin>
   <div *ngIf="cargando" class="text-center">
-    
+    <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
   </div>
   <app-login *ngIf="!cargando"></app-login>
 </ng-template>
