--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -1,1 +1,67 @@
-<p>encabezado works!</p>
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">MasterGym</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inscripcion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Ver inscripciones</a>
+                </li>
+                <li class="nav-item dropdown" dropdown>
+                    <a class="nav-link dropdown-toggle" dropdownToggle role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Clientes
+                    </a>
+                    <ul class="dropdown-menu" *dropdownMenu="">
+                        <li><a class="dropdown-item" href="#">Agregar</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" routerLink="/listado-clientes">Ver clientes</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item dropdown" dropdown>
+                    <a class="nav-link dropdown-toggle" dropdownToggle href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Precios
+                    </a>
+                    <ul class="dropdown-menu" *dropdownMenu="">
+                        <li><a class="dropdown-item" href="#">Agregar</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Ver precios</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Usuarios</a>
+                </li>
+
+                <li class="nav-item dropdown" dropdown>
+                    <a class="nav-link dropdown-toggle" dropdownToggle href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Reportes
+                    </a>
+                    <ul class="dropdown-menu" *dropdownMenu="">
+                        <li><a class="dropdown-item" href="#">Suscripciones diarias</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Suscripciones mensuales</a></li>
+                        <li><a class="dropdown-item" href="#">Mas vendidas</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <button class="btn btn-danger" (click)="logout()">Salir</button>
+</nav>
