--- a/src/app/listado-clientes/listado-clientes.component.html
+++ b/src/app/listado-clientes/listado-clientes.component.html
@@ -1,1 +1,22 @@
-<p>listado-clientes works!</p>
+<div class="container mt-5">
+    <h4>Listado de clientes</h4>
+
+    <form action="">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Buscar a un cliente">
+        </div>
+    </form>
+
+    <div class="row mt-3">
+        <div class="col-sm-3">
+            <div class="card">
+                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Juan martinez</h5>
+                    <a href="#" class="card-link">Editar</a>
+                    <a href="#" class="card-link text-danger">Desactivar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
