--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -19,7 +19,7 @@
                         Clientes
                     </a>
                     <ul class="dropdown-menu" *dropdownMenu="">
-                        <li><a class="dropdown-item" href="#">Agregar</a></li>
+                        <li><a class="dropdown-item" routerLink="/agregar-cliente">Agregar</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -33,7 +33,7 @@
                         Precios
                     </a>
                     <ul class="dropdown-menu" *dropdownMenu="">
-                        <li><a class="dropdown-item" href="#">Agregar</a></li>
+                        <li><a class="dropdown-item">Agregar</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
