--- a/src/app/listado-clientes/listado-clientes.component.html
+++ b/src/app/listado-clientes/listado-clientes.component.html
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <p>{{cliente.id}}</p>
                     <h5 class="card-title">{{cliente.nombre}} {{cliente.apellido}}</h5>
-                    <a href="#" class="card-link">Editar</a>
+                    <a [routerLink]="['/agregar-cliente/', cliente.id]" class="card-link">Editar</a>
                     <a href="#" class="card-link text-danger">Desactivar</a>
                 </div>
             </div>
