--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -26,21 +26,9 @@
                         <li><a class="dropdown-item" routerLink="/listado-clientes">Ver clientes</a></li>
                     </ul>
                 </li>
-
-                <li class="nav-item dropdown" dropdown>
-                    <a class="nav-link dropdown-toggle" dropdownToggle href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Precios
-                    </a>
-                    <ul class="dropdown-menu" *dropdownMenu="">
-                        <li><a class="dropdown-item">Agregar</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Ver precios</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" routerLink="/precios">Precios</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Usuarios</a>
                 </li>
