--- a/src/app/listado-clientes/listado-clientes.component.html
+++ b/src/app/listado-clientes/listado-clientes.component.html
@@ -8,7 +8,7 @@
     </form>
 
     <div class="row mt-3">
-        <div class="col-sm-3" *ngFor="let cliente of clientes">
+        <div class="col-sm-3 mt-3" *ngFor="let cliente of clientes">
             <div class="card">
                 <img [src]="cliente.imgUrl" class="card-img-top imgCliente" >
                 <div class="card-body">
