--- a/src/app/seleccionar-cliente/seleccionar-cliente.component.html
+++ b/src/app/seleccionar-cliente/seleccionar-cliente.component.html
@@ -1,22 +1,22 @@
 <div class="clientes">
-    <div class="form-group">
+    <div class="form-group" *ngIf="!nombre">
         <label for="">Cliente</label>
         <input class="form-control" type="text" (input)="buscarClientes($event)" placeholder="Busque un cliente">
     </div>
-    <div class="form-group mt-3">
+    <div class="form-group mt-3" *ngIf="nombre">
         <label for="">Cliente</label>
         <div class="row">
             <div class="col-sm-10">
-                <input disabled type="text" class="form-control">
+                <input [(ngModel)]="nombre" disabled type="text" class="form-control">
             </div>
             <div class="col-sm-2">
-                <button class="btn btn-danger">Cancelar</button>
+                <button class="btn btn-danger" (click)="cancelarCliente()">Cancelar</button>
             </div>
         </div>
     </div>
     <div class="list-group mt-3">
         <div *ngFor="let cliente of clientes">
-            <a *ngIf="cliente.visible" href="#" class="list-group-item list-group-item-action">
+            <a *ngIf="cliente.visible" (click)="seleccionarCliente(cliente)" class="list-group-item list-group-item-action">
                 {{cliente.nombre}} {{cliente.apellido}}</a>
         </div>
     </div>
