--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/">Inscripcion</a>
+                    <a class="nav-link" aria-current="page" routerLink="/">Inscripcion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Ver inscripciones</a>
+                    <a class="nav-link" aria-current="page">Ver inscripciones</a>
                 </li>
                 <li class="nav-item dropdown" dropdown>
                     <a class="nav-link dropdown-toggle" dropdownToggle role="button" data-bs-toggle="dropdown"
