--- a/src/app/inscripcion/inscripcion.component.html
+++ b/src/app/inscripcion/inscripcion.component.html
@@ -9,7 +9,7 @@
 
         <div class="form-control">
             <label for="">Precio</label>
-            <select (change)="seleccionarPrecio($event)" class="form-control" name="" id="">
+            <select [(ngModel)]="idPrecio" (change)="seleccionarPrecio($event)" class="form-control" name="" id="">
                 <option [value]="null">Seleccione un precio</option>
                 <option *ngFor="let precio of precios" [value]="precio.id">{{precio.nombre}}</option>
             </select>
