--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" aria-current="page" routerLink="/">Inscripcion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page">Ver inscripciones</a>
+                    <a class="nav-link" aria-current="page" routerLink="/listado-inscripciones">Ver inscripciones</a>
                 </li>
                 <li class="nav-item dropdown" dropdown>
                     <a class="nav-link dropdown-toggle" dropdownToggle role="button" data-bs-toggle="dropdown"
@@ -28,20 +28,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" routerLink="/precios">Precios</a>
-                </li>
-                <li class="nav-item dropdown" dropdown>
-                    <a class="nav-link dropdown-toggle" dropdownToggle href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Reportes
-                    </a>
-                    <ul class="dropdown-menu" *dropdownMenu="">
-                        <li><a class="dropdown-item" href="#">Suscripciones diarias</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Suscripciones mensuales</a></li>
-                        <li><a class="dropdown-item" href="#">Mas vendidas</a></li>
-                    </ul>
                 </li>
             </ul>
         </div>
